reorganized some folders

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "graduation-headshot.jpeg"
   name             : "Thu Pham"
   pronouns         : "she/her"  
-  bio              : "Research Analyst @ Federal Reserve"
+  bio              : "Research Analyst @ NYFRB. Harvard Stat/CS 2023."
   location         : "New York"
   employer         : "Federal Reserve"
   uri              : # URL
@@ -182,6 +182,7 @@ exclude:
   - README
   - tmp
   - vendor
+  - _unused # for unused pages provided in template
 keep_files:
   - .git
   - .svn
