pre-organizing pages

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "graduation-headshot.jpeg"
   name             : "Thu Pham"
   pronouns         : "she/her"  
-  bio              : "Research Analyst @ NYFRB. Harvard Stat/CS 2023."
+  bio              : "Research Analyst @ FRBNY. Harvard Stat/CS 2023."
   location         : "New York"
   employer         : "Federal Reserve"
   uri              : # URL
