--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,7 +21,7 @@ main:
   #   url: /year-archive/
     
   - title: "CV"
-    url: /mtpham17.github.io/files/mtp_CV.pdf
+    url: /files/tpham_CV.pdf
     
   # - title: "Guide"
   #   url: /markdown/
